--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # Site settings
 title: C.C
 baseurl: ""
-url: "https://chengchen.github.io"
+url: "https://doobluhc.github.io"
 google_analytics: # Tracking ID, e.g. "UA-000000-01"
 
 # Author
 author:
   name: Cheng Chen
-  desc: Hello nice to meet you
+  desc: Hi! Welcome to my website!
   email: cheng.chen2@mail.mcgill.ca
   selfie: assets/img/profile.jpg
 
@@ -49,7 +49,7 @@ plugins:
 
 # Permalinks
 permalink: /:year-:month-:day/:title
-paginate_path: "/portfolio/page:num/"
+# paginate_path: "/portfolio/page:num/"
 paginate: 5
 exclude:
   - "Gemfile"
