change github link

--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ social:
   bitbucket:
   dribbble:
   flickr:
-  github: https://github.com/doobluhc
+  github: doobluhc
   google_plus:
   instagram:
   keybase:
