add tracking id

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: C.C
 baseurl: ""
 url: "https://doobluhc.github.io"
-google_analytics: # Tracking ID, e.g. "UA-000000-01"
+google_analytics: G-LQRVMPT4M2
 
 # Author
 author:
