--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,8 @@
 title: C.C
 baseurl: ""
 url: "https://doobluhc.github.io"
-google_analytics: "G-LQRVMPT4M2"
+google_analytics: G-LQRVMPT4M2
+
 
 # Author
 author:
@@ -46,6 +47,7 @@ sass:
 # Gems
 plugins:
   - jekyll-paginate
+  - jekyll-sitemap
 
 # Permalinks
 permalink: /:year-:month-:day/:title
